fix: refine hero section styles for improved layout and spacing

--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -4,14 +4,16 @@
     flex-direction: column;
     align-items: center;
     background-color: black;
-    overflow: hidden; /* contém tudo dentro do bloco fixo */
+    overflow: hidden;
+    /* contém tudo dentro do bloco fixo */
 }
 
 .hero-video {
     min-width: 220px;
     width: 100%;
     max-width: 1536px;
-    flex: 1; /* ocupa o espaço que sobrar depois do texto */
+    flex: 1;
+    /* ocupa o espaço que sobrar depois do texto */
     object-fit: cover;
 }
 
@@ -19,9 +21,10 @@
     display: flex;
     justify-content: center;
     align-items: start;
-    padding: 15px 0;
+    padding: 15px 0 80px 0;
     width: 100%;
 }
+
 .home-hero-text h1 {
     color: #FFF;
     font-family: "Poppins", sans-serif;
